@@ -31,7 +31,9 @@
 #include "syx-interp.h"
 
 #include <assert.h>
+#ifdef HAVE_UNISTD_H
 #include <unistd.h>
+#endif
 #include <stdio.h>
 #include <string.h>
 
